format and add lint rule

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
     branches: 'master'
 
 jobs:
-  build_site:
+  init:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -16,10 +16,21 @@ jobs:
         with:
           node-version: 18
           cache: npm
-
       - name: Install dependencies
         run: npm install
 
+  lint:
+    needs: init
+    runs-on: ubuntu-latest
+    steps:
+      - name: lint
+        run: |
+          npm run lint
+
+  build_site:
+    needs: lint
+    runs-on: ubuntu-latest
+    steps:
       - name: build
         env:
           BASE_PATH: '/website'
